Bug 12599: Accept string as integer attribute to prevent assert, fix courtesy rickg r=self and harishd